--- a/test_web.html
+++ b/test_web.html
@@ -344,14 +344,14 @@
                         <h4>자세 분류 정보</h4>
                         <table class="posture-table">
                             <tr><th>ID</th><th>자세명</th></tr>
-                            <tr><td>0</td><td>정자세</td></tr>
-                            <tr><td>1</td><td>오른쪽 다리꼬기</td></tr>
-                            <tr><td>2</td><td>왼쪽 다리꼬기</td></tr>
-                            <tr><td>3</td><td>등 기대고 엉덩이 앞으로</td></tr>
-                            <tr><td>4</td><td>거북목(폰 보기)</td></tr>
-                            <tr><td>5</td><td>오른쪽 팔걸이</td></tr>
-                            <tr><td>6</td><td>왼쪽 팔걸이</td></tr>
-                            <tr><td>7</td><td>목 앞으로(컴퓨터)</td></tr>
+                            <tr><td>0</td><td>바른 자세</td></tr>
+                            <tr><td>1</td><td>거북목 자세</td></tr>
+                            <tr><td>2</td><td>목 숙이기</td></tr>
+                            <tr><td>3</td><td>앞으로 당겨 기대기</td></tr>
+                            <tr><td>4</td><td>오른쪽으로 기대기</td></tr>
+                            <tr><td>5</td><td>왼쪽으로 기대기</td></tr>
+                            <tr><td>6</td><td>오른쪽 다리 꼭기</td></tr>
+                            <tr><td>7</td><td>왼쪽 다리 꼭기</td></tr>
                         </table>
                     </div>
                 </div>
@@ -373,14 +373,14 @@
         let messageId = 1;
         
         const postureNames = [
-            "정자세",
-            "오른쪽 다리꼬기", 
-            "왼쪽 다리꼬기",
-            "등 기대고 엉덩이 앞으로",
-            "거북목(폰 보기)",
-            "오른쪽 팔걸이",
-            "왼쪽 팔걸이", 
-            "목 앞으로(컴퓨터)"
+            "바른 자세",
+            "거북목 자세", 
+            "목 숙이기",
+            "앞으로 당겨 기대기",
+            "오른쪽으로 기대기",
+            "왼쪽으로 기대기",
+            "오른쪽 다리 꼭기", 
+            "왼쪽 다리 꼭기"
         ];
 
         function updateStatus(status, message) {
